[package]
description = "A simple, redis based queue system built in Rust. Focusing on ease of use and flexibility."
name = "redyq"
version = "0.1.0"
authors = ["JamesPatrickGill <jpgilldev@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.18.0"
serde_json = "1.0.60"
serde = { version = "1.0.118", features = ["derive"] }
