[package]
description = "A simple, redis based queue system built in Rust. Focusing on ease of use and flexibility."
name = "redyq"
version = "0.1.2"
authors = ["JamesPatrickGill <jpgilldev@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = ["queue", "redis"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
redis = "0.18.0"
serde_json = "1.0.60"
serde = { version = "1.0.118", features = ["derive"] }
strum = "0.20"
strum_macros = "0.20"
